# slot_map

./: .gitignore  CMakeLists.txt  README.md  SlotMapTest01.cpp  SlotMapTest02.cpp  SlotMapTest03.cpp  SlotMapTest04.cpp  appveyor.yml  codecov19.cmd
.github/workflows/: build.yml
slot_map/: CMakeLists.txt  slot_map.h
